# hawaii-archiver

./: AUTHORS  CMakeLists.txt  README  README.md
.tx/: config
data/: CMakeLists.txt  archiver.desktop  hawaii-archiver.desktop  hawaii-archiver_it.desktop
src/: CMakeLists.txt  archivemodel.cpp  archivemodel.h  archiverwindow.cpp  archiverwindow.h  archiverwindow.ui  main.cpp
src/translations/: it.ts  template.ts
